logs/gmvault.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IMAPClient-0.13.egg-info'...
Listing './lib/python3.5/site-packages/Logbook-0.10.1.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/gmv'...
Compiling './lib/python3.5/site-packages/gmv/blowfish.py'...
***   File "./lib/python3.5/site-packages/gmv/blowfish.py", line 62
    _MODULUS = 2L ** 32
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gmv/conf'...
Compiling './lib/python3.5/site-packages/gmv/conf/conf_helper.py'...
***   File "./lib/python3.5/site-packages/gmv/conf/conf_helper.py", line 107
    print "Resource: Commandline argument %s has no value\n" % (self._cli_arg)
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/conf/conf_tests.py'...
***   File "./lib/python3.5/site-packages/gmv/conf/conf_tests.py", line 268
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gmv/conf/utils'...
Compiling './lib/python3.5/site-packages/gmv/conf/utils/struct_parser.py'...
***   File "./lib/python3.5/site-packages/gmv/conf/utils/struct_parser.py", line 269
    except tokenize.TokenError, err:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/conf/utils/struct_parser_tests.py'...
***   File "./lib/python3.5/site-packages/gmv/conf/utils/struct_parser_tests.py", line 92
    except CompilerError, err:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/credential_utils.py'...
***   File "./lib/python3.5/site-packages/gmv/credential_utils.py", line 77
    fdesc = os.open(a_filepath, os.O_CREAT|os.O_WRONLY, 0600)
                                                           ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/gmv/gmv_cmd.py'...
***   File "./lib/python3.5/site-packages/gmv/gmv_cmd.py", line 459
    except Exception, _: #pylint:disable=W0703
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/gmvault.py'...
***   File "./lib/python3.5/site-packages/gmv/gmvault.py", line 102
    except Exception, _: #pylint:disable-msg=W0703
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/gmvault_db.py'...
***   File "./lib/python3.5/site-packages/gmv/gmvault_db.py", line 267
    except gmvault_utils.GuessEncoding, enc_err:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/gmvault_utils.py'...
***   File "./lib/python3.5/site-packages/gmv/gmvault_utils.py", line 413
    except OSError, (_, strerror): #IGNORE:W0612
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/imap_utils.py'...
***   File "./lib/python3.5/site-packages/gmv/imap_utils.py", line 119
    except Exception, ignored:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/mod_imap.py'...
***   File "./lib/python3.5/site-packages/gmv/mod_imap.py", line 162
    except ssl.SSLError, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gmv/test_utils.py'...
***   File "./lib/python3.5/site-packages/gmv/test_utils.py", line 438
    except Exception, _: #pylint: disable-msg=W0703
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gmvault-1.9.1.egg-info'...
Listing './lib/python3.5/site-packages/imapclient'...
Listing './lib/python3.5/site-packages/imapclient/examples'...
Listing './lib/python3.5/site-packages/imapclient/test'...
Listing './lib/python3.5/site-packages/logbook'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
